<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mad.weathernow.CityWeather">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/text_view_hourly_data"
        android:id="@+id/textViewHourlyData"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:padding="10dp"
        android:background="@color/gray"
        android:textColor="@color/darkGray" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:id="@+id/solidLine"
        android:layout_below="@+id/textViewHourlyData"
        android:background="@color/skyBlue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/solidLine"
        android:id="@+id/layout_current_location"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text_view_current_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text_view_current_location_value"
            android:id="@+id/textViewCurrentLocationValue"
            android:textStyle="bold"/>

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewHourlyData"
        android:layout_below="@+id/layout_current_location"
        android:background="@color/gray"/>

</RelativeLayout>
